--- a/requirements.txt
+++ b/requirements.txt
@@ -17,21 +17,22 @@ filelock==3.3.2
 folium==0.14.0
 future==0.18.2
 geocoder==1.38.1
+gunicorn==22.0.0
 idna==3.3
 Jinja2==3.1.2
 joblib==1.1.0
 kombu==4.6.11
 lxml==4.9.2
 MarkupSafe==2.1.1
-mysql-connector-python==8.0.29
-mysqlclient==2.1.1
 numpy==1.22.0
+packaging==24.1
 Pillow==9.2.0
 platformdirs==2.4.0
 protobuf==4.21.2
+psycopg==3.2.1
+psycopg2-binary==2.9.9
 PyMySQL==1.0.2
 python-dateutil==2.8.2
-Python-Rest-Framework==0.3.14
 pytz==2022.1
 ratelim==0.1.6
 requests==2.28.1
@@ -43,8 +44,8 @@ sorl-thumbnail==12.8.0
 soupsieve==2.3.2.post1
 sqlparse==0.4.2
 threadpoolctl==3.0.0
+typing_extensions==4.12.2
 tzdata==2021.5
 urllib3==1.26.10
 vine==1.3.0
 virtualenv==20.10.0
-whitenoise==6.2.0
